--- a/html5/epa/index.html
+++ b/html5/epa/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1">
     <style type="text/css">
-        select,video,canvas
+        select,video,canvas,table
         {
             padding: 0;
             margin: 0;
@@ -51,7 +51,7 @@
         var g1, mx1, my1, mx2, my2, drag, streaming;
 
         function load() {
-            t("vid", "canv", "sources", "color");
+            t("vid", "canv", "sources", "color", "mirror");
             g1 = canv.getContext("2d");
             MediaStreamTrack.getVideoTracks(function (infos) {
                 infos.reverse().forEach(function (info, i) {
@@ -102,11 +102,13 @@
             }
 
             function getInputX(evt) {
-                return ((evt.pageX || evt.touches[0].clientX) - canv.offsetLeft) * canv.width / canv.clientWidth;
+                if(evt.touches)
+                    console.log(evt.touches[0]);
+                return ((evt.layerX || evt.touches[0].clientX) - canv.clientLeft) * canv.width / canv.clientWidth;
             }
 
             function getInputY(evt) {
-                return ((evt.pageY || evt.touches[0].clientY) - canv.offsetTop) * canv.height / canv.clientHeight;
+                return ((evt.layerY || evt.touches[0].clientY) - canv.clientTop) * canv.height / canv.clientHeight;
             }
 
             function getInput(evt) {
@@ -186,7 +188,16 @@
 
         function snapshot() {
             if (canv.width > 0 && canv.height > 0) {
+                if (mirror.checked){
+                    g1.save();
+                    g1.scale(-1, 1);
+                    g1.translate(-canv.width, 0);
+                }
                 g1.drawImage(vid, 0, 0, canv.width, canv.height);
+
+                if(mirror.checked){
+                    g1.restore();
+                }
 
                 if (mx1 && my1 && mx2 && my2 && mx1 < mx2 && my1 < my2) {
                     var dat1 = g1.getImageData(0, 0, canv.width, canv.height);
@@ -221,8 +232,21 @@
 </head>
 <body onload="load()">
     <h1>Pick a color</h1>
-    <select id="sources"></select>
-    <canvas id="canv"></canvas>
+    <table>
+        <tr>
+            <td>
+                <select id="sources"></select>
+            </td>
+            <td>
+                <input type="checkbox" id="mirror" /><label for="mirror">Mirror image</label>
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2">
+                <canvas id="canv"></canvas>
+            </td>
+        </tr>
+    </table>
     <video id="vid" autoplay="autoplay" style="display:none;"></video>
     <h2>Current color: <span id="color"></span></h2>
     <h2>Instructions</h2>
