updated website info

--- a/index.html
+++ b/index.html
@@ -27,27 +27,24 @@
       <p>Other technologies I've used for projects: RaspberryPi, Arduino, MSP430, Virtual Reality, OpenGL, WebGL, Three.js, WebRTC.</p>
       <h2>Contact Me</h2>
       <ul>
-        <li><a href="mailto:sean@seanmcbeth.com">Email</a></li>
+        <li><a href="mailto:sean.mcbeth+web@primrosevr.com?subject=Website contact">Email</a></li>
         <li><a href="https://github.com/capnmidnight">Github</a></li>
         <li><a href="https://twitter.com/Sean_McBeth">Twitter</a></li>
         <li><a href="https://www.linkedin.com/pub/sean-mcbeth/6/727/378">LinkedIn</a></li>
-        <li><a href="http://www.gamedev.net/blog/43-working-late-past-midnight/">Gamedev.net</a>
         <li><a href="http://sean-mcbeth.tumblr.com">Tumblr blog</a></li>
         <li><a href="https://plus.google.com/+SeanMcBeth/posts">Google+</a></li>
         <li><a href="https://news.ycombinator.com/user?id=moron4hire">Hacker News</a></li>
+        <li><a href="http://www.gamedev.net/blog/43-working-late-past-midnight/">Gamedev.net</a>
         <li><a href="http://www.imdb.com/name/nm5111059/">IMDB (yup)</a></li>
       </ul>
       <h2>Current Projects</h2>
       <ul>
-        <li><a href="https://www.primroseeditor.com/">Primrose: a syntax-highlighting code editor control and framework for WebVR</a></li>
-        <li><a href="https://plus.google.com/+SeanMcBeth/posts/gKF7sQ2FAhh">DIY Haptic Glove</a></li>
-        <li><a href="https://www.linkedin.com/pulse/i-just-hacked-my-brain-sean-mcbeth">DIY Galvanic Vestibular Stimulation (virtual balance)</a></li>
-        <li><a href="https://github.com/capnmidnight/SqlSiphon">SqlSiphon: a database management library for .NET</a></li>
+        <li><a href="https://www.primrosevr.com/">Primrose: build VR experiences in your browser</a></li>
         <li><a href="http://www.highlandfrs.com">Highland Solutions: a consultancy for helping people wrangle their data</a></li>
       </ul>
       <h2>Writing and Art</h2>
       <ul>
-        <li><a href="https://www.linkedin.com/today/author/19711820">My writings on LinkedIn</a></li>
+        <li><a href="https://www.linkedin.com/today/author/sean-mcbeth-3787276">My writings on LinkedIn</a></li>
         <li><a href="http://sean-mcbeth.tumblr.com/">My writings on Tumblr</a></li>
         <li><a href="http://www.amazon.com/dp/B00J3XY6N2">Three Years: an ebook</a></li>
         <li><a href="http://sean-mcbeth.tumblr.com/tagged/Galapagos">Photography and writing on the Galapagos Islands</a></li>
@@ -58,6 +55,9 @@
       </ul>
       <h2>Past Projects</h2>
       <ul>
+        <li><a href="https://plus.google.com/+SeanMcBeth/posts/gKF7sQ2FAhh">DIY Haptic Glove</a></li>
+        <li><a href="https://www.linkedin.com/pulse/i-just-hacked-my-brain-sean-mcbeth">DIY Galvanic Vestibular Stimulation (virtual balance)</a></li>
+        <li><a href="https://github.com/capnmidnight/SqlSiphon">SqlSiphon: a database management library for .NET</a></li>
         <li><a href="https://www.justwritedammit.com/">Just Write, Dammit! A book writing platform</a></li>
         <li><a href="https://github.com/capnmidnight/small-town">Small Town: interactive fiction + AI Shakespere</a></li>
         <li><a href="http://sean-mcbeth.tumblr.com/post/60153233552/a-thing-i-built-a-while-ago-you-can-see-it-in">Speaking Accent Recognition Testing Machine</a></li>
