--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="keywords" content="software development, software engineering, programming, freelancing, Sean T. McBeth" />
+    <meta name="google-site-verification" content="b5ROQLbu9zO96FmpO9cCo39HcDWzbLIDuuzgFdZPDYg" />
     <title>Sean T. McBeth: engineer, photographer, mad scientist</title>
     <link type="text/css" rel="stylesheet" href="style.css">
   </head>
