update project list

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 			<p>These are some of my current side-projects. For more information on my VR and AR capabilities, please see <a href="vr.html">my XR devices page</a>.</p>
 			<ul>
 				<li><a href="https://capnmidnight.github.io/Juniper/" target="_blank" rel="noopener">Juniper</a>: a Unity3D framework for building cross-platform VR and AR applications.</li>
+				<li><a href="https://capnmidnight.github.io/Calla/" target="_blank" rel="noopener">Calla</a>: a spatialized audio chat app for meetups and parties.</li>
 			</ul>
 		</section>
 		<section id="talks">
