Project name explanation

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 		<section id="projects">
 			<h2><a name="projects">Projects</a></h2>
-			<p>These are some of my current side-projects. For more information on my VR and AR capabilities, please see <a href="vr.html">my XR devices page</a>.</p>
+			<p>These are some of my current side-projects. For more information on my VR and AR capabilities, please see <a href="vr.html">my XR devices page</a>.</p> I name all of my projects after plants.
 			<ul>
 				<li><a href="https://capnmidnight.github.io/Juniper/" target="_blank" rel="noopener">Juniper</a>: a Unity3D framework for building cross-platform VR and AR applications.</li>
 				<li><a href="https://github.com/capnmidnight/Calla/" target="_blank" rel="noopener">Calla</a>: a spatialized audio chat app for meetups and parties. <a href="https://www.calla.chat" target="_blank" rel="noopener">Try it out here!</a></li>
