Restore Primrose to active status

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 			<ul>
 				<li><a href="https://github.com/capnmidnight/Juniper/" target="_blank" rel="noopener">Juniper</a>: a Unity3D framework for building cross-platform VR and AR applications.</li>
 				<li><a href="https://www.calla.chat" target="_blank" rel="noopener">Calla</a>: a spatialized audio chat app for meetups and parties. <a href="https://github.com/capnmidnight/Calla/" target="_blank" rel="noopener">Find the source code here</a>.</li>
+				<li><a href="https://www.primrosevr.com/" target="_blank" rel="noopener">Primrose</a>: a syntax-highlighting text-editor that renders to an HTML5 Canvas element. Useful for generating textures for WebGL apps. <a href="https://www.github.com/capnmidnight/Primrose/" target="_blank" rel="noopener">Find the source code here</a></li>.
 			</ul>
 		</section>
 
