supposedly fixes some accessibility issues

--- a/index.html
+++ b/index.html
@@ -17,28 +17,45 @@
     <header>
         <nav id="menu">
             <ul>
+                <li style="display:none">
+                    <a href="#contact"
+                       role="menuitem"
+                       aria-label="Contact"
+                       title="Contact">Contact</a>
+                </li>
+                <li style="display:none">
+                    <a href="#bio"
+                       role="menuitem"
+                       aria-label="Bio"
+                       title="Bop">Bio</a>
+                </li>
                 <li>
                     <a href="#projects"
+                       role="menuitem"
                        aria-label="Projects"
                        title="Projects">.com</a>
                 </li>
                 <li>
                     <a href="#talks"
+                       role="menuitem"
                        aria-label="Talks and Interviews"
                        title="Talks and Inteviews">.net</a>
                 </li>
                 <li>
                     <a href="#press"
+                       role="menuitem"
                        aria-label="Press"
                        title="Press">.tv</a>
                 </li>
                 <li>
                     <a href="vr.html"
+                       role="menuitem"
                        aria-label="Virtual Reality"
                        title="VR"><abbr>vr</abbr>/</a>
                 </li>
                 <li>
                     <a href="other.html"
+                       role="menuitem"
                        aria-label="other info"
                        title="Other">etc/</a>
                 </li>
@@ -62,7 +79,7 @@
                     <a href="mailto:sean@seanmcbeth.com?subject=Website%20contact"
                        aria-label="Email Sean"
                        title="Email Sean">
-                       <span class="icon icon-email"></span>
+                       <span class="icon icon-email" role="presentation"></span>
                        <span class="print-only">Email Sean</span>
                     </a>
                 </li>
@@ -71,7 +88,7 @@
                     <a href="https://twitter.com/Sean_McBeth"
                        aria-label="Follow Sean on Twitter"
                        title="Follow @Sean_McBeth on Twitter">
-                       <span class="icon icon-twitter"></span>
+                       <span class="icon icon-twitter" role="presentation"></span>
                        <span class="print-only">Follow @Sean_McBeth on Twitter</span>
                     </a>
                 </li>
@@ -80,7 +97,7 @@
                     <a href="https://www.linkedin.com/pub/sean-mcbeth/6/727/378"
                        aria-label="Follow Sean on LinkedIn"
                        title="Follow Sean on LinkedIn">
-                       <span class="icon icon-linkedin"></span>
+                       <span class="icon icon-linkedin" role="presentation"></span>
                        <span class="print-only">Follow Sean on LinkedIn</span>
                     </a>
                 </li>
@@ -89,7 +106,7 @@
                     <a href="https://github.com/capnmidnight"
                        aria-label="Follow Sean on Git hub"
                        title="Follow Sean on Github">
-                       <span class="icon icon-github"></span>
+                       <span class="icon icon-github" role="presentation"></span>
                        <span class="print-only">Follow Sean on GitHub</span>
                     </a>
                 </li>
@@ -98,7 +115,7 @@
                     <a href="tel:+17172617689"
                        aria-label="Call Sean"
                        title="Call Sean">
-                       <span class="icon icon-telephone"></span>
+                       <span class="icon icon-telephone" role="presentation"></span>
                        <span class="print-only">Call Sean</span>
                     </a>
                 </li>
@@ -107,7 +124,7 @@
                     <a href="Resume-STMcBeth-2019.pdf"
                        aria-label="Download Sean's résumé (PDF 159KB)"
                        title="Download Sean's résumé">
-                       <span class="icon icon-resume"></span>
+                       <span class="icon icon-resume" role="presentation"></span>
                        <span class="print-only">Download Sean's résumé</span>
                     </a>
                 </li>
