--- a/index.html
+++ b/index.html
@@ -195,12 +195,12 @@
             <ul>
                 <li>
                     <a href="https://mavricconference.umd.edu/src/pages/SethT.McBeth.html"><abbr>UMD</abbr> <abbr>MAVRIC</abbr> Conference 2019</a>:
-                    I spoke on accessibility for immersive applications and devices, software, and design techniques for achieving better access. (<a href="https://www.youtube.com/watch?v=Bzhp5g4HbKQ" aria-label="Watch VR and AR for Everyone on YouTube">YouTube</a><!--, <a href="presentations/vr-and-ar-for-everyon.pdf" aria-label="VR and AR for everyone PDF">PDF</a>, <a href="presentations/vr-and-ar-for-everyon.pptx" aria-label="VR and AR for everyone PowerPoint">PPTX</a>-->)
+                    I spoke on accessibility for immersive applications and devices, software, and design techniques for achieving better access. (<a href="https://www.youtube.com/watch?v=Bzhp5g4HbKQ">Watch VR and AR for Everyone on YouTube</a><!--, <a href="presentations/vr-and-ar-for-everyon.pdf" aria-label="VR and AR for everyone PDF">PDF</a>, <a href="presentations/vr-and-ar-for-everyon.pptx" aria-label="VR and AR for everyone PowerPoint">PPTX</a>-->)
                 </li>
 
                 <li>
                     <a href="https://www.meetup.com/CDK-Coder-Designer-Keggers/events/261603470/"><abbr>CDK</abbr>: Virtual Reality (<abbr>VR</abbr>) vs Augmented Reality (<abbr>AR</abbr>) Which Tech Will Win the Battle?</a>:
-                    I spoke on the current state of the Augmented Reality market, both of the progress of hardware and on design best-practices, with recommendations on how to get started in <abbr>AR</abbr> software development, primarily in the context Enterprise-level software consulting.<!--(<a href="presentations/ar-for-fun-and-profit.pdf" aria-label="AR for Fun and Profit PDF">PDF</a>, <a href="presentations/ar-for-fun-and-profit.pptx" aria-label="AR for Fun and Profit PowerPoint">PPTX</a>)-->
+                    I spoke on the current state of the Augmented Reality market, both of the progress of hardware and on design best-practices, with recommendations on how to get started in <abbr>AR</abbr> software development, primarily in the context of Enterprise-level software consulting.<!--(<a href="presentations/ar-for-fun-and-profit.pdf" aria-label="AR for Fun and Profit PDF">PDF</a>, <a href="presentations/ar-for-fun-and-profit.pptx" aria-label="AR for Fun and Profit PowerPoint">PPTX</a>)-->
                 </li>
             </ul>
 
