get canvas resizing figured out right

--- a/Marxent Labs Test/index.html
+++ b/Marxent Labs Test/index.html
@@ -7,7 +7,7 @@
 
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" type="text/css" href="index.css" />
-    <script type="module" src="index.js"></script>
+    <script type="module" src="bundle.js"></script>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
         <canvas id="frontBuffer"
                 touch-action="none"
                 tabindex="1"
-                style="background-color: black;" />
+                style="background-color: black;"></canvas>
     </main>
     <footer id="status">test</footer>
 </body>
