--- a/Marxent Labs Test/index.html
+++ b/Marxent Labs Test/index.html
@@ -7,7 +7,7 @@
 
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" type="text/css" href="index.css" />
-    <script type="module" src="bundle.js"></script>
+    <script src="bundle.js"></script>
 </head>
 
 <body>
