--- a/TypeScript Code/src/apps/ai-chat-bot/index.html
+++ b/TypeScript Code/src/apps/ai-chat-bot/index.html
@@ -4,7 +4,7 @@
 
 <div id="aiForm">
     <div class="controls">
-        <button id="startStop" type="button" class="btn btn-primary">Start listening</button>
+        <button id="startStop" type="button" class="btn btn-primary">Start</button>
         <button id="reprompt" type="button" class="btn btn-primary">Reprompt</button>
         <button id="export" type="button" class="btn btn-primary" disabled>Export</button>
         <button id="reset" type="button" class="btn btn-danger" disabled>Reset</button>
@@ -54,9 +54,9 @@
                     or situational details.
                 </p>
                 <p>
-                    Click the <em>"Start listening"</em> button to begin recording speech. The app
+                    Click the <em>"Start"</em> button to begin recording speech. The app
                     attempts to detect quiet spaces around your utterances, so you don't
-                    need to click <em>"Stop listening"</em> in between each of your prompts.
+                    need to click <em>"Stop"</em> in between each of your prompts.
                 </p>
                 <p>
                     However, if you're in a noisy environment, or your speakers are turned
