--- a/TypeScript Code/src/apps/ai-chat-bot/index.html
+++ b/TypeScript Code/src/apps/ai-chat-bot/index.html
@@ -4,8 +4,8 @@
 
 <div id="aiForm">
     <div class="controls">
-        <button id="startStop" type="button" class="btn btn-primary">Start</button>
-        <button id="reprompt" type="button" class="btn btn-primary">Reprompt</button>
+        <button id="startStop" type="button" class="btn btn-primary" disabled>Start</button>
+        <button id="reprompt" type="button" class="btn btn-primary" disabled>Reprompt</button>
         <button id="export" type="button" class="btn btn-primary" disabled>Export</button>
         <button id="reset" type="button" class="btn btn-danger" disabled>Reset</button>
     </div>
