--- a/ImageViewer/wwwroot/splash.html
+++ b/ImageViewer/wwwroot/splash.html
@@ -2,9 +2,24 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <style>
+        html, body {
+            position: absolute;
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+        }
+
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: black;
+        }
+    </style>
 </head>
 <body>
-    Splash!
+    <img src="/images/marigold_small_transparent.png">
 </body>
 </html>
